--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,8 +2,7 @@
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  padding: 0px;
   font-weight: normal;
 }
 
@@ -24,12 +23,11 @@ a,
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
   }
 
   #app {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    padding: 0 2rem; */
   }
 }
