--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,10 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+
+  /* 自定义项目的样式 */
+  --theme--word--color: #8bc555; /* 主题颜色 */
 }
 
 /* semantic color variables for this project */
